@@ -10,7 +10,6 @@ import static oshi.software.os.CgroupInfo.UNLIMITED;
 import static oshi.software.os.CgroupInfo.UNLIMITED_MEMORY;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
@@ -33,62 +32,62 @@ class LinuxCgroupInfoV1DispatchTest {
 
     @Test
     void readCpuQuotaV1WithPositiveValue(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("cpu.cfs_quota_us"), "250000\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("cpu.cfs_quota_us"), "250000\n");
         assertEquals(250000L, cgroup.readCpuQuotaV1(tempDir.toString() + "/"));
     }
 
     @Test
     void readCpuQuotaV1ZeroMeansUnlimited(@TempDir Path tempDir) throws IOException {
         // A zero value from getLongFromFile (file empty or parse failure) should map to UNLIMITED
-        Files.write(tempDir.resolve("cpu.cfs_quota_us"), "0\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("cpu.cfs_quota_us"), "0\n");
         assertEquals(UNLIMITED, cgroup.readCpuQuotaV1(tempDir.toString() + "/"));
     }
 
     @Test
     void readCpuPeriodV1WithValue(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("cpu.cfs_period_us"), "100000\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("cpu.cfs_period_us"), "100000\n");
         assertEquals(100000L, cgroup.readCpuPeriodV1(tempDir.toString() + "/"));
     }
 
     @Test
     void readCpuPeriodV1ZeroMeansDefault(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("cpu.cfs_period_us"), "0\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("cpu.cfs_period_us"), "0\n");
         assertEquals(DEFAULT_CPU_PERIOD, cgroup.readCpuPeriodV1(tempDir.toString() + "/"));
     }
 
     @Test
     void readMemoryLimitV1ZeroMeansUnlimited(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("memory.limit_in_bytes"), "0\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("memory.limit_in_bytes"), "0\n");
         assertEquals(UNLIMITED_MEMORY, cgroup.readMemoryLimitV1(tempDir.toString() + "/"));
     }
 
     @Test
     void readPidLimitV1ZeroMeansUnlimited(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("pids.max"), "0\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("pids.max"), "0\n");
         assertEquals(UNLIMITED, cgroup.readPidLimitV1(tempDir.toString() + "/"));
     }
 
     @Test
     void readPidLimitV1WithNumericValue(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("pids.max"), "2048\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("pids.max"), "2048\n");
         assertEquals(2048L, cgroup.readPidLimitV1(tempDir.toString() + "/"));
     }
 
     @Test
     void readPidCurrentV1WithValue(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("pids.current"), "99\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("pids.current"), "99\n");
         assertEquals(99L, cgroup.readPidCurrentV1(tempDir.toString() + "/"));
     }
 
     @Test
     void readCpuUsageV1WithValue(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("cpuacct.usage"), "987654321\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("cpuacct.usage"), "987654321\n");
         assertEquals(987654321L, cgroup.readCpuUsageV1(tempDir.toString() + "/"));
     }
 
     @Test
     void readMemoryUsageV1WithValue(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("memory.usage_in_bytes"), "67108864\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("memory.usage_in_bytes"), "67108864\n");
         assertEquals(67108864L, cgroup.readMemoryUsageV1(tempDir.toString() + "/"));
     }
 
@@ -97,26 +96,26 @@ class LinuxCgroupInfoV1DispatchTest {
     @Test
     void readCpuQuotaV2SingleTokenMax(@TempDir Path tempDir) throws IOException {
         // cpu.max with just "max" (no period)
-        Files.write(tempDir.resolve("cpu.max"), "max\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("cpu.max"), "max\n");
         assertEquals(UNLIMITED, cgroup.readCpuQuotaV2(tempDir.toString() + "/"));
     }
 
     @Test
     void readCpuPeriodV2SingleToken(@TempDir Path tempDir) throws IOException {
         // cpu.max with just one token (no period specified)
-        Files.write(tempDir.resolve("cpu.max"), "200000\n".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("cpu.max"), "200000\n");
         assertEquals(DEFAULT_CPU_PERIOD, cgroup.readCpuPeriodV2(tempDir.toString() + "/"));
     }
 
     @Test
     void readMemoryLimitV2EmptyFile(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("memory.max"), "".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("memory.max"), "");
         assertEquals(UNLIMITED_MEMORY, cgroup.readMemoryLimitV2(tempDir.toString() + "/"));
     }
 
     @Test
     void readPidLimitV2EmptyFile(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("pids.max"), "".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("pids.max"), "");
         assertEquals(UNLIMITED, cgroup.readPidLimitV2(tempDir.toString() + "/"));
     }
 
@@ -132,13 +131,13 @@ class LinuxCgroupInfoV1DispatchTest {
 
     @Test
     void readMemoryUsageV2EmptyFile(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("memory.current"), "".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("memory.current"), "");
         assertEquals(0L, cgroup.readMemoryUsageV2(tempDir.toString() + "/"));
     }
 
     @Test
     void readPidCurrentV2EmptyFile(@TempDir Path tempDir) throws IOException {
-        Files.write(tempDir.resolve("pids.current"), "".getBytes(StandardCharsets.UTF_8));
+        Files.writeString(tempDir.resolve("pids.current"), "");
         assertEquals(0L, cgroup.readPidCurrentV2(tempDir.toString() + "/"));
     }
 
