@@ -5,7 +5,6 @@
 package oshi.util;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -26,6 +25,6 @@ public final class TestFileUtil {
      */
     public static void writeFile(Path path, String content) throws IOException {
         Files.createDirectories(path.getParent());
-        Files.write(path, content.getBytes(StandardCharsets.UTF_8));
+        Files.writeString(path, content);
     }
 }
